--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,29 +13,31 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
-      - name: Install deps
-        run: pnpm i --no-frozen-lockfile --shamefully-hoist
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          registry-url: 'https://registry.npmjs.org/'
-          cache: 'pnpm'
+#      - name: Install pnpm
+#        uses: pnpm/action-setup@v2
+#        with:
+#          version: 8
+#
+#      - name: Install deps
+#        run: pnpm i --no-frozen-lockfile --shamefully-hoist
+#
+#      - name: Use Node.js
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: 18
+#          registry-url: 'https://registry.npmjs.org/'
+#          cache: 'pnpm'
 
 #      - name: Build
 #        run: pnpm build:npm
 
       - run: |
           echo "version=$(grep -o '"version": *"[^"]*"' package.json | awk -F'"' '{print $4}')" >> "$GITHUB_ENV"
+          echo "prerelease=$(${{ env.version }} == *-* ]] && echo 'true' || echo 'false')" >> "$GITHUB_ENV"
 
       - run: |
           echo "version: ${{ env.version }}"
+          echo "version: ${{ env.prerelease }}"
           [[ ${{ env.version }} == *-* ]] && echo "字符串包含 '-'" || echo "字符串不包含 '-'"
 
       - uses: ncipollo/release-action@v1
