--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,12 +33,13 @@ jobs:
 
       - run: |
           echo "version=$(grep -o '"version": *"[^"]*"' package.json | awk -F'"' '{print $4}')" >> "$GITHUB_ENV"
-          echo "prerelease=$([[ ${{ env.version }} == *-* ]] && echo 'true' || echo 'false')"
-      #   echo "prerelease=$([[ ${{ env.version }} == *-* ]] && echo 'true' || echo 'false')" >> "$GITHUB_ENV"
+
+      - run: |
+          echo "prerelease=$([[ ${{ env.version }} == *-* ]] && echo 'true' || echo 'false')" >> "$GITHUB_ENV"
 
       - run: |
           echo "version: ${{ env.version }}"
-#          echo "version: ${{ env.prerelease }}"
+          echo "version: ${{ env.prerelease }}"
 
 #      - uses: ncipollo/release-action@v1
 #        with:
