--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,4 +52,5 @@ jobs:
           prerelease: ${{ env.prerelease }}
           allowUpdates: true
           generateReleaseNotes: true
+          bodyFile: "README.md"
           token: ${{ secrets.TOKEN }}
