--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "version": "0.0.3-alpha.0",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
